crates/craby_codegen/src/parser/snapshots/craby_codegen__parser__native_spec_parser__tests__hash.snap
---
source: crates/craby_codegen/src/parser/native_spec_parser.rs
expression: "[hash_1, hash_2, hash_3].join(\"\\n\")"
---
a263f7c30395cffb
a263f7c30395cffb
f4cb280d86920585
