crates/craby_codegen/src/parser/snapshots/craby_codegen__parser__native_spec_parser__tests__multiple_specs.snap
---
source: crates/craby_codegen/src/parser/native_spec_parser.rs
expression: schemas
---
[
    Schema {
        module_name: "BarModule",
        aliases: [
            Object(
                ObjectTypeAnnotation {
                    name: "Common",
                    props: [
                        Prop {
                            name: "value",
                            type_annotation: Number,
                        },
                    ],
                },
            ),
        ],
        enums: [],
        methods: [
            Method {
                name: "bar",
                params: [
                    Param {
                        name: "arg",
                        type_annotation: Object(
                            ObjectTypeAnnotation {
                                name: "Common",
                                props: [
                                    Prop {
                                        name: "value",
                                        type_annotation: Number,
                                    },
                                ],
                            },
                        ),
                    },
                ],
                ret_type: Void,
            },
        ],
        signals: [],
    },
    Schema {
        module_name: "FooModule",
        aliases: [
            Object(
                ObjectTypeAnnotation {
                    name: "Common",
                    props: [
                        Prop {
                            name: "value",
                            type_annotation: Number,
                        },
                    ],
                },
            ),
        ],
        enums: [],
        methods: [
            Method {
                name: "foo",
                params: [
                    Param {
                        name: "arg",
                        type_annotation: Object(
                            ObjectTypeAnnotation {
                                name: "Common",
                                props: [
                                    Prop {
                                        name: "value",
                                        type_annotation: Number,
                                    },
                                ],
                            },
                        ),
                    },
                ],
                ret_type: Void,
            },
        ],
        signals: [],
    },
]
