crates/craby_codegen/src/parser/snapshots/craby_codegen__parser__native_spec_parser__tests__signals.snap
---
source: crates/craby_codegen/src/parser/native_spec_parser.rs
expression: schemas
---
[
    Schema {
        module_name: "TestModule",
        aliases: [],
        enums: [],
        methods: [],
        signals: [
            Signal {
                name: "onFoo",
            },
        ],
    },
]
