crates/craby_codegen/src/parser/snapshots/craby_codegen__parser__native_spec_parser__tests__spec_interface.snap
---
source: crates/craby_codegen/src/parser/native_spec_parser.rs
expression: schemas
---
[
    Schema {
        module_name: "MyModule",
        alias_map: [],
        enum_map: [],
        methods: [
            Method {
                name: "myMethod",
                params: [],
                ret_type: Void,
            },
        ],
    },
]
